feat: add ancients cards styles to index.css

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/css/index.css">
+    <link rel="stylesheet" href="css/normilize.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>ELDRITCH</title>
 </head>
 <body>
-    <div class="container"></div>
-    <div class="container"></div>
-    <div class="container"></div>
-    <script type ="module" src="./src/index.js"></script>
+    <div class="container containter-ancients">
+        <div class="card card-ancient-1"></div>
+        <div class="card card-ancient-2"></div>
+        <div class="card card-ancient-3"></div>
+        <div class="card card-ancient-4"></div>
+    </div>
+    <div class="container container-difficulty"></div>
+    <div class="container container-deck"></div>
+    <script type ="module" src="./index.js"></script>
 </body>
 </html>
