--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,59 @@
 </head>
 <body>
     <div class="container containter-ancients">
-        <div class="card card-ancient-1"></div>
-        <div class="card card-ancient-2"></div>
-        <div class="card card-ancient-3"></div>
-        <div class="card card-ancient-4"></div>
+        <p class="title">Pick an ancient</p>
+        <div class="container-ancients-cards">
+            <div class="card" id="ancient-1"></div>
+            <div class="card" id="ancient-2"></div>
+            <div class="card" id="ancient-3"></div>
+            <div class="card" id="ancient-4"></div>
+        </div>
+
     </div>
-    <div class="container container-difficulty"></div>
-    <div class="container container-deck"></div>
+    <div class="container container-difficulty">
+        <p class="title">Select difficulty</p>
+        <div class="container-difficulty-buttons">
+            <button class="difficulty-button" id="difficulty-1">Beginner</button>  
+            <button class="difficulty-button" id="difficulty-2">Easy</button>  
+            <button class="difficulty-button" id="difficulty-3">Normal</button>  
+            <button class="difficulty-button" id="difficulty-4">Hard</button>  
+            <button class="difficulty-button" id="difficulty-5">Hardcore</button>   
+        </div>
+    </div>
+    <div class="container container-deck">
+        <p class="title">The deck is ready</p>
+        <div class="container-deck-cards">
+            <div class="tracker">
+                <div class="stage-container">
+                    <p class="title stage-title">First stage</p>
+                    <div class="stage-values-container">
+                        <div class="stage-value" id="stage-value-1-1"></div>
+                        <div class="stage-value" id="stage-value-1-2"></div>
+                        <div class="stage-value" id="stage-value-1-3"></div>
+                    </div>
+                </div>
+                <div class="stage-container">
+                    <p class="title stage-title">Second stage</p>
+                    <div class="stage-values-container">
+                        <div class="stage-value" id="stage-value-2-1"></div>
+                        <div class="stage-value" id="stage-value-2-2"></div>
+                        <div class="stage-value" id="stage-value-2-3"></div>
+                    </div>
+                    
+                </div>
+                <div class="stage-container">
+                    <p class="title stage-title">Third stage</p>
+                    <div class="stage-values-container">
+                        <div class="stage-value" id="stage-value-3-1"></div>
+                        <div class="stage-value" id="stage-value-3-2"></div>
+                        <div class="stage-value" id="stage-value-3-3"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="card" id="deck"></div>
+            <div class="card" id="current"></div>
+        </div>
+    </div>
     <script type ="module" src="./index.js"></script>
 </body>
 </html>
