feat: add tracker decreasing, add pick of difficulty, make some fucntions for speacial cases

--- a/src/index.html
+++ b/src/index.html
@@ -30,32 +30,32 @@
         </div>
     </div>
     <div class="container container-deck">
-        <p class="title">The deck is ready</p>
+        <p class="title" id="deck-title">The deck is ready</p>
         <div class="container-deck-cards">
             <div class="tracker">
                 <div class="stage-container">
                     <p class="title stage-title">First stage</p>
                     <div class="stage-values-container">
-                        <div class="stage-value" id="stage-value-1-1"></div>
-                        <div class="stage-value" id="stage-value-1-2"></div>
-                        <div class="stage-value" id="stage-value-1-3"></div>
+                        <div class="stage-value" id="stage-1-green"></div>
+                        <div class="stage-value" id="stage-1-brown"></div>
+                        <div class="stage-value" id="stage-1-blue"></div>
                     </div>
                 </div>
                 <div class="stage-container">
                     <p class="title stage-title">Second stage</p>
                     <div class="stage-values-container">
-                        <div class="stage-value" id="stage-value-2-1"></div>
-                        <div class="stage-value" id="stage-value-2-2"></div>
-                        <div class="stage-value" id="stage-value-2-3"></div>
+                        <div class="stage-value" id="stage-2-green"></div>
+                        <div class="stage-value" id="stage-2-brown"></div>
+                        <div class="stage-value" id="stage-2-blue"></div>
                     </div>
                     
                 </div>
                 <div class="stage-container">
                     <p class="title stage-title">Third stage</p>
                     <div class="stage-values-container">
-                        <div class="stage-value" id="stage-value-3-1"></div>
-                        <div class="stage-value" id="stage-value-3-2"></div>
-                        <div class="stage-value" id="stage-value-3-3"></div>
+                        <div class="stage-value" id="stage-3-green"></div>
+                        <div class="stage-value" id="stage-3-brown"></div>
+                        <div class="stage-value" id="stage-3-blue"></div>
                     </div>
                 </div>
             </div>
