refactor: replace index.html to root

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normilize.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="src/css/normilize.css">
+    <link rel="stylesheet" href="src/css/index.css">
     <title>ELDRITCH</title>
 </head>
 <body>
@@ -63,6 +63,6 @@
             <div class="card" id="current"></div>
         </div>
     </div>
-    <script type ="module" src="./index.js"></script>
+    <script type ="module" src="./src/index.js"></script>
 </body>
 </html>
