feat: webpack index.js and index.html

--- a/index.html
+++ b/index.html
@@ -1,68 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/css/normilize.css">
-    <link rel="stylesheet" href="src/css/index.css">
-    <title>ELDRITCH</title>
-</head>
-<body>
-    <div class="container containter-ancients">
-        <p class="title">Pick an ancient</p>
-        <div class="container-ancients-cards">
-            <div class="card" id="ancient-1"></div>
-            <div class="card" id="ancient-2"></div>
-            <div class="card" id="ancient-3"></div>
-            <div class="card" id="ancient-4"></div>
-        </div>
-
-    </div>
-    <div class="container container-difficulty">
-        <p class="title">Select difficulty</p>
-        <div class="container-difficulty-buttons">
-            <button class="difficulty-button" id="difficulty-1">Beginner</button>  
-            <button class="difficulty-button" id="difficulty-2">Easy</button>  
-            <button class="difficulty-button" id="difficulty-3">Normal</button>  
-            <button class="difficulty-button" id="difficulty-4">Hard</button>  
-            <button class="difficulty-button" id="difficulty-5">Hardcore</button>   
-        </div>
-    </div>
-    <div class="container container-deck">
-        <p class="title" id="deck-title">The deck is ready</p>
-        <div class="container-deck-cards">
-            <div class="tracker">
-                <div class="stage-container">
-                    <p class="title stage-title">First stage</p>
-                    <div class="stage-values-container">
-                        <div class="stage-value" id="stage-1-green"></div>
-                        <div class="stage-value" id="stage-1-brown"></div>
-                        <div class="stage-value" id="stage-1-blue"></div>
-                    </div>
-                </div>
-                <div class="stage-container">
-                    <p class="title stage-title">Second stage</p>
-                    <div class="stage-values-container">
-                        <div class="stage-value" id="stage-2-green"></div>
-                        <div class="stage-value" id="stage-2-brown"></div>
-                        <div class="stage-value" id="stage-2-blue"></div>
-                    </div>
-                    
-                </div>
-                <div class="stage-container">
-                    <p class="title stage-title">Third stage</p>
-                    <div class="stage-values-container">
-                        <div class="stage-value" id="stage-3-green"></div>
-                        <div class="stage-value" id="stage-3-brown"></div>
-                        <div class="stage-value" id="stage-3-blue"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="card" id="deck"></div>
-            <div class="card" id="current"></div>
-        </div>
-    </div>
-    <script type ="module" src="./src/index.js"></script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="src/css/normilize.css"><link rel="stylesheet" href="src/css/index.css"><title>ELDRITCH</title><script defer="defer" src="dist/bundle.js"></script></head><body><div class="container containter-ancients"><p class="title">Pick an ancient</p><div class="container-ancients-cards"><div class="card" id="ancient-1"></div><div class="card" id="ancient-2"></div><div class="card" id="ancient-3"></div><div class="card" id="ancient-4"></div></div></div><div class="container container-difficulty"><p class="title">Select difficulty</p><div class="container-difficulty-buttons"><button class="difficulty-button" id="difficulty-1">Beginner</button> <button class="difficulty-button" id="difficulty-2">Easy</button> <button class="difficulty-button" id="difficulty-3">Normal</button> <button class="difficulty-button" id="difficulty-4">Hard</button> <button class="difficulty-button" id="difficulty-5">Hardcore</button></div></div><div class="container container-deck"><p class="title" id="deck-title">The deck is ready</p><div class="container-deck-cards"><div class="tracker"><div class="stage-container"><p class="title stage-title">First stage</p><div class="stage-values-container"><div class="stage-value" id="stage-1-green"></div><div class="stage-value" id="stage-1-brown"></div><div class="stage-value" id="stage-1-blue"></div></div></div><div class="stage-container"><p class="title stage-title">Second stage</p><div class="stage-values-container"><div class="stage-value" id="stage-2-green"></div><div class="stage-value" id="stage-2-brown"></div><div class="stage-value" id="stage-2-blue"></div></div></div><div class="stage-container"><p class="title stage-title">Third stage</p><div class="stage-values-container"><div class="stage-value" id="stage-3-green"></div><div class="stage-value" id="stage-3-brown"></div><div class="stage-value" id="stage-3-blue"></div></div></div></div><div class="card" id="deck"></div><div class="card" id="current"></div></div></div><script src="./dist/bundle.js"></script></body></html>
